--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
